# jvm

./: .gitignore  Cargo.toml  README.md
classes/: AbstractMethodError.java  ArithmeticException.java  ArrayIndexOutOfBoundsException.java  ClassCircularityError.java  IncompatibleClassChangeError.java  NegativeArraySizeException.java  Throwable.java  UnsupportedClassVersionError.java
java/: NoClassDefFoundError.java  NoSuchFieldError.java  NoSuchMethodError.java  NullPointerException.java
java/java/lang/: AbstractMethodError.java  ArithmeticException.java  ArrayIndexOutOfBoundsException.java  ArrayStoreException.java  NoSuchFieldError.java  (+9 more)
src/: class.rs  class_loader.rs  const_pool.rs  datastructures.rs  field.rs  field_storage.rs  heap.rs  instructions.rs  interp.rs  interpreter.rs  jvm.rs  lib.rs  method.rs  object.rs  parse.rs  string_interning.rs  typ.rs  type_interner.rs  verification.rs
test_classes/: Add.java  ControlFlow.java  FieldAccess.java  GetStatic.java  InvokeStatic.java
test_classes/pass/: Add.java  ControlFlow.java  FieldAccess.java  InvokeStatic.java
tests/: ControlFlow.java  InitLock.java  Initialization.java  LazyInit.java  LazyInitHelper2.java  LazyUnresolved.java  circular.rs  field_access.rs  init.rs  invoke_static.rs  invoke_virtual.rs  test.rs
tests/java/: Arrays.java  CrossJvm.java  Exceptions.java  FieldAccessInheritance.java  FieldAccessInheritanceSuper.java  InvokeVirtual.java  LazyResolve.java  ManyAllocs.java  Strings.java
tests/pass/: Arrays.java  InvokeStatic.java  InvokeStaticSuper.java  LazyInit.java  LazyInitHelper1.java
