[package]
name = "jvm"
version = "0.1.0"
authors = ["Vincent Junge <vincentjunge@posteo.net>"]
edition = "2021"

[dependencies]
# AccessFlags
bitflags = "1.3"
# Storage with JVM lifetime; to be removed later
fixed-typed-arena = "0.2"
# poison-free api, could be removed
parking_lot = "0.12"
# Heap allocation
libc = "0.2.125"
